--- a/demo/day100/day010.html
+++ b/demo/day100/day010.html
@@ -38,7 +38,7 @@
 </head>
 <body>
     <div class="wrap">
-        <section class="display" data-first="123" data-operate="+" data-second="12">0</section>
+        <section class="display">0</section>
         <section class="operation">+</section>
         <section class="operation">-</section>
         <section class="operation">*</section>
