--- a/demo/day100/day011.html
+++ b/demo/day100/day011.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Day 010 - js实现windwos10计算器全部功能</title>
+    <title></title>
 </head>
 <body>
     
