--- a/demo/website_practice/index.html
+++ b/demo/website_practice/index.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>网站练习</title>
+    <style>
+        div{
+            position: relative;
+            width: 300px;
+            margin: 50px auto;
+        }
+        a{
+            text-decoration: none;
+            color: #000;
+            font-size: 25px;
+        }
+        a:hover{
+            text-decoration: underline;
+            color: #f00;
+        }
+    </style>
 </head>
+
 <body>
-    <a href="Tmall/index.html">天猫</a>
-    <a href="JD/index.html">京东</a>
+    <div>
+        <h1>目录</h1>
+        <a href="Tmall/tmall.html" target="_blank">天猫</a><br>
+        <a href="JD/index.html" target="_blank">京东</a>
+    </div>
 </body>
+
 </html>
