--- a/demo/website_practice/Tmall/tmall.html
+++ b/demo/website_practice/Tmall/tmall.html
@@ -215,7 +215,7 @@
             </div>
             <div class="cate-sub">
               <div class="cs-left">
-                <div class="csl">
+                <!-- <div class="csl">
                   <div>当季流行</div>
                   <div class="csl-1">
                     <a href="javascript:void(0);">女装新品</a>
@@ -231,7 +231,8 @@
                     <a href="javascript:void(0);">潮流家居服</a>
                     <a href="javascript:void(0);">百搭船袜</a>
                   </div>
-                </div>
+                </div> -->
+                <cate-list></cate-list>
                 <div class="csl">
                   <div>精选上装</div>
                   <div class="csl-1">
@@ -364,128 +365,7 @@
               </span>
             </div>
             <div class="cate-sub">
-                <div class="cs-left">
-                  <div class="csl">
-                    <div>当季流行</div>
-                    <div class="csl-1">
-                      <a href="javascript:void(0);">女装新品</a>
-                      <a href="javascript:void(0);">商场同款</a>
-                      <a href="javascript:void(0);">仙女连衣裙</a>
-                      <a href="javascript:void(0);">T恤</a>
-                      <a href="javascript:void(0);">衬衫</a>
-                      <a href="javascript:void(0);">时髦外套</a>
-                      <a href="javascript:void(0);">休闲裤</a>
-                      <a href="javascript:void(0);">牛仔裤</a>
-                      <a href="javascript:void(0);">无痕文胸</a>
-                      <a href="javascript:void(0);">运动文胸</a>
-                      <a href="javascript:void(0);">潮流家居服</a>
-                      <a href="javascript:void(0);">百搭船袜</a>
-                    </div>
-                  </div>
-                  <div class="csl">
-                    <div>精选上装</div>
-                    <div class="csl-1">
-                      <a href="javascript:void(0);">毛呢外套</a>
-                      <a href="javascript:void(0);">羽绒服</a>
-                      <a href="javascript:void(0);">棉服</a>
-                      <a href="javascript:void(0);">丝绒卫衣</a>
-                      <a href="javascript:void(0);">毛针织衫</a>
-                      <a href="javascript:void(0);">皮毛一体</a>
-                      <a href="javascript:void(0);">皮草毛衣</a>
-                      <a href="javascript:void(0);">衬衫</a>
-                      <a href="javascript:void(0);">卫衣</a>
-                      <a href="javascript:void(0);">针织衫</a>
-                      <a href="javascript:void(0);">T恤</a>
-                      <a href="javascript:void(0);">短外套</a>
-                      <a href="javascript:void(0);">小西装</a>
-                      <a href="javascript:void(0);">风衣</a>
-                    </div>
-                  </div>
-                  <div class="csl">
-                    <div>浪漫裙装</div>
-                    <div class="csl-1">
-                      <a href="javascript:void(0);">连衣裙</a>
-                      <a href="javascript:void(0);">半身裙</a>
-                      <a href="javascript:void(0);">A字裙</a>
-                      <a href="javascript:void(0);">荷叶边裙</a>
-                      <a href="javascript:void(0);">大摆裙</a>
-                      <a href="javascript:void(0);">包臀裙</a>
-                      <a href="javascript:void(0);">百褶裙</a>
-                      <a href="javascript:void(0);">长袖连衣裙</a>
-                      <a href="javascript:void(0);">棉麻连衣裙</a>
-                      <a href="javascript:void(0);">牛仔裙</a>
-                      <a href="javascript:void(0);">蕾丝连衣裙</a>
-                      <a href="javascript:void(0);">真丝连衣裙</a>
-                      <a href="javascript:void(0);">印花连衣裙</a>
-                    </div>
-                  </div>
-                  <div class="csl">
-                    <div>女士下装</div>
-                    <div class="csl-1">
-                      <a href="javascript:void(0);">休闲裤</a>
-                      <a href="javascript:void(0);">阔腿裤</a>
-                      <a href="javascript:void(0);">牛仔裤</a>
-                      <a href="javascript:void(0);">打底裤</a>
-                      <a href="javascript:void(0);">开叉运动裤</a>
-                      <a href="javascript:void(0);">哈伦裤</a>
-                      <a href="javascript:void(0);">背带裤</a>
-                      <a href="javascript:void(0);">小脚裤</a>
-                      <a href="javascript:void(0);">西装裤</a>
-                      <a href="javascript:void(0);">短裤</a>
-                    </div>
-                  </div>
-                  <div class="csl">
-                    <div>特色女装</div>
-                    <div class="csl-1">
-                      <a href="javascript:void(0);">时尚套装</a>
-                      <a href="javascript:void(0);">休闲套装</a>
-                      <a href="javascript:void(0);">日系女装</a>
-                      <a href="javascript:void(0);">精选妈妈装</a>
-                      <a href="javascript:void(0);">大码女装</a>
-                      <a href="javascript:void(0);">职业套装</a>
-                      <a href="javascript:void(0);">优雅旗袍</a>
-                      <a href="javascript:void(0);">精致礼服</a>
-                      <a href="javascript:void(0);">婚纱</a>
-                      <a href="javascript:void(0);">唐装</a>
-                      <a href="javascript:void(0);">小码女装</a>
-                    </div>
-                  </div>
-                  <div class="csl">
-                    <div>文胸塑身</div>
-                    <div class="csl-1">
-                      <a href="javascript:void(0);">光面文胸</a>
-                      <a href="javascript:void(0);">运动文胸</a>
-                      <a href="javascript:void(0);">美背文胸</a>
-                      <a href="javascript:void(0);">聚拢文胸</a>
-                      <a href="javascript:void(0);">大杯文胸</a>
-                      <a href="javascript:void(0);">轻薄塑身</a>
-                    </div>
-                  </div>
-                  <div class="csl">
-                    <div>家居服</div>
-                    <div class="csl-1">
-                      <a href="javascript:void(0);">春夏家居服</a>
-                      <a href="javascript:void(0);">纯棉家居服</a>
-                      <a href="javascript:void(0);">莫代尔家居服</a>
-                      <a href="javascript:void(0);">真丝家居服</a>
-                      <a href="javascript:void(0);">春夏睡裙</a>
-                      <a href="javascript:void(0);">男士家居服</a>
-                      <a href="javascript:void(0);">情侣家居服</a>
-                      <a href="javascript:void(0);">性感睡裙</a>
-                    </div>
-                  </div>
-                  <div class="csl">
-                    <div>内裤背心</div>
-                    <div class="csl-1">
-                      <a href="javascript:void(0);">男士内裤</a>
-                      <a href="javascript:void(0);">女式内裤</a>
-                      <a href="javascript:void(0);">男士内裤多条装</a>
-                      <a href="javascript:void(0);">女士内裤多条装</a>
-                      <a href="javascript:void(0);">莫代尔内裤</a>
-                      <a href="javascript:void(0);">吊带背心</a>
-                    </div>
-                  </div>
-                </div>
+                <div class="cs-left"></div>
                 <div class="cs-right">
                   <a href="javascript:void(0);"><img src="https://img.alicdn.com/bao/uploaded/TB1QgL7LFXXXXboXFXXSutbFXXX.jpg_170x120q30.jpg" alt=""></a>
                   <a href="javascript:void(0);"><img src="https://img.alicdn.com/bao/uploaded/TB18HHTLFXXXXaJaXXXSutbFXXX.jpg_170x120q30.jpg" alt=""></a>
@@ -513,148 +393,7 @@
                 <a href="">美妆</a> /<a href="">个人护理</a>
               </span>
             </div>
-            <div class="cate-sub">
-                <div class="cs-left">
-                  <div class="csl">
-                    <div>当季流行</div>
-                    <div class="csl-1">
-                      <a href="javascript:void(0);">女装新品</a>
-                      <a href="javascript:void(0);">商场同款</a>
-                      <a href="javascript:void(0);">仙女连衣裙</a>
-                      <a href="javascript:void(0);">T恤</a>
-                      <a href="javascript:void(0);">衬衫</a>
-                      <a href="javascript:void(0);">时髦外套</a>
-                      <a href="javascript:void(0);">休闲裤</a>
-                      <a href="javascript:void(0);">牛仔裤</a>
-                      <a href="javascript:void(0);">无痕文胸</a>
-                      <a href="javascript:void(0);">运动文胸</a>
-                      <a href="javascript:void(0);">潮流家居服</a>
-                      <a href="javascript:void(0);">百搭船袜</a>
-                    </div>
-                  </div>
-                  <div class="csl">
-                    <div>精选上装</div>
-                    <div class="csl-1">
-                      <a href="javascript:void(0);">毛呢外套</a>
-                      <a href="javascript:void(0);">羽绒服</a>
-                      <a href="javascript:void(0);">棉服</a>
-                      <a href="javascript:void(0);">丝绒卫衣</a>
-                      <a href="javascript:void(0);">毛针织衫</a>
-                      <a href="javascript:void(0);">皮毛一体</a>
-                      <a href="javascript:void(0);">皮草毛衣</a>
-                      <a href="javascript:void(0);">衬衫</a>
-                      <a href="javascript:void(0);">卫衣</a>
-                      <a href="javascript:void(0);">针织衫</a>
-                      <a href="javascript:void(0);">T恤</a>
-                      <a href="javascript:void(0);">短外套</a>
-                      <a href="javascript:void(0);">小西装</a>
-                      <a href="javascript:void(0);">风衣</a>
-                    </div>
-                  </div>
-                  <div class="csl">
-                    <div>浪漫裙装</div>
-                    <div class="csl-1">
-                      <a href="javascript:void(0);">连衣裙</a>
-                      <a href="javascript:void(0);">半身裙</a>
-                      <a href="javascript:void(0);">A字裙</a>
-                      <a href="javascript:void(0);">荷叶边裙</a>
-                      <a href="javascript:void(0);">大摆裙</a>
-                      <a href="javascript:void(0);">包臀裙</a>
-                      <a href="javascript:void(0);">百褶裙</a>
-                      <a href="javascript:void(0);">长袖连衣裙</a>
-                      <a href="javascript:void(0);">棉麻连衣裙</a>
-                      <a href="javascript:void(0);">牛仔裙</a>
-                      <a href="javascript:void(0);">蕾丝连衣裙</a>
-                      <a href="javascript:void(0);">真丝连衣裙</a>
-                      <a href="javascript:void(0);">印花连衣裙</a>
-                    </div>
-                  </div>
-                  <div class="csl">
-                    <div>女士下装</div>
-                    <div class="csl-1">
-                      <a href="javascript:void(0);">休闲裤</a>
-                      <a href="javascript:void(0);">阔腿裤</a>
-                      <a href="javascript:void(0);">牛仔裤</a>
-                      <a href="javascript:void(0);">打底裤</a>
-                      <a href="javascript:void(0);">开叉运动裤</a>
-                      <a href="javascript:void(0);">哈伦裤</a>
-                      <a href="javascript:void(0);">背带裤</a>
-                      <a href="javascript:void(0);">小脚裤</a>
-                      <a href="javascript:void(0);">西装裤</a>
-                      <a href="javascript:void(0);">短裤</a>
-                    </div>
-                  </div>
-                  <div class="csl">
-                    <div>特色女装</div>
-                    <div class="csl-1">
-                      <a href="javascript:void(0);">时尚套装</a>
-                      <a href="javascript:void(0);">休闲套装</a>
-                      <a href="javascript:void(0);">日系女装</a>
-                      <a href="javascript:void(0);">精选妈妈装</a>
-                      <a href="javascript:void(0);">大码女装</a>
-                      <a href="javascript:void(0);">职业套装</a>
-                      <a href="javascript:void(0);">优雅旗袍</a>
-                      <a href="javascript:void(0);">精致礼服</a>
-                      <a href="javascript:void(0);">婚纱</a>
-                      <a href="javascript:void(0);">唐装</a>
-                      <a href="javascript:void(0);">小码女装</a>
-                    </div>
-                  </div>
-                  <div class="csl">
-                    <div>文胸塑身</div>
-                    <div class="csl-1">
-                      <a href="javascript:void(0);">光面文胸</a>
-                      <a href="javascript:void(0);">运动文胸</a>
-                      <a href="javascript:void(0);">美背文胸</a>
-                      <a href="javascript:void(0);">聚拢文胸</a>
-                      <a href="javascript:void(0);">大杯文胸</a>
-                      <a href="javascript:void(0);">轻薄塑身</a>
-                    </div>
-                  </div>
-                  <div class="csl">
-                    <div>家居服</div>
-                    <div class="csl-1">
-                      <a href="javascript:void(0);">春夏家居服</a>
-                      <a href="javascript:void(0);">纯棉家居服</a>
-                      <a href="javascript:void(0);">莫代尔家居服</a>
-                      <a href="javascript:void(0);">真丝家居服</a>
-                      <a href="javascript:void(0);">春夏睡裙</a>
-                      <a href="javascript:void(0);">男士家居服</a>
-                      <a href="javascript:void(0);">情侣家居服</a>
-                      <a href="javascript:void(0);">性感睡裙</a>
-                    </div>
-                  </div>
-                  <div class="csl">
-                    <div>内裤背心</div>
-                    <div class="csl-1">
-                      <a href="javascript:void(0);">男士内裤</a>
-                      <a href="javascript:void(0);">女式内裤</a>
-                      <a href="javascript:void(0);">男士内裤多条装</a>
-                      <a href="javascript:void(0);">女士内裤多条装</a>
-                      <a href="javascript:void(0);">莫代尔内裤</a>
-                      <a href="javascript:void(0);">吊带背心</a>
-                    </div>
-                  </div>
-                </div>
-                <div class="cs-right">
-                  <a href="javascript:void(0);"><img src="https://img.alicdn.com/bao/uploaded/TB1B_DcJpXXXXXWXFXXSutbFXXX.jpg_170x120q30.jpg" alt=""></a>
-                  <a href="javascript:void(0);"><img src="https://img.alicdn.com/bao/uploaded/i4/T1gRqVXk4fXXb1upjX.jpg_170x120q30.jpg" alt=""></a>
-                  <a href="javascript:void(0);"><img src="https://img.alicdn.com/bao/uploaded/TB1wNJAHFXXXXc7XpXXSutbFXXX.jpg_170x120q30.jpg" alt=""></a>
-                  <a href="javascript:void(0);"><img src="https://img.alicdn.com/bao/uploaded/TB1w472LFXXXXXwXVXXSutbFXXX.jpg_170x120q30.jpg" alt=""></a>
-                  <a href="javascript:void(0);"><img src="https://img.alicdn.com/bao/uploaded/TB1fETUHpXXXXbmapXXwu0bFXXX.png_170x120q30.jpg" alt=""></a>
-                  <a href="javascript:void(0);"><img src="https://img.alicdn.com/bao/uploaded/TB1UJIfJXXXXXctaXXXSutbFXXX.jpg_170x120q30.jpg" alt=""></a>
-                  <a href="javascript:void(0);"><img src="https://img.alicdn.com/bao/uploaded/TB1FfxjHFXXXXbWaXXXSutbFXXX.jpg_170x120q30.jpg" alt=""></a>
-                  <a href="javascript:void(0);"><img src="https://img.alicdn.com/bao/uploaded/TB18XAnIVXXXXclXXXXSutbFXXX.jpg_170x120q30.jpg" alt=""></a>
-                  <a href="javascript:void(0);"><img src="https://img.alicdn.com/bao/uploaded/TB1gWxjFFXXXXcEaFXXSutbFXXX.jpg_170x120q30.jpg" alt=""></a>
-                  <a href="javascript:void(0);"><img src="https://img.alicdn.com/bao/uploaded/http://img.taobaocdn.com/bao/uploaded/TB1HMfoHpXXXXclXXXXwu0bFXXX.png_170x120q30.jpg" alt=""></a>
-                  <a href="javascript:void(0);"><img src="https://img.alicdn.com/tps/TB18nTOLVXXXXc5XXXXXXXXXXXX-1000-500.jpg_170x120q30.jpg" alt=""></a>
-                  <a href="javascript:void(0);"><img src="https://img.alicdn.com/tps/TB1wzzFLVXXXXbXXFXXXXXXXXXX-400-200.jpg_170x120q30.jpg" alt=""></a>
-                  <a href="javascript:void(0);"><img src="https://img.alicdn.com/tps/TB1SvLzLVXXXXaKXVXXXXXXXXXX-1000-500.jpg_170x120q30.jpg" alt=""></a>
-                  <a href="javascript:void(0);"><img src="https://img.alicdn.com/tps/TB17DDrLVXXXXbOaXXXXXXXXXXX-1000-500.jpg_170x120q30.jpg" alt=""></a>
-                  <a href="javascript:void(0);"><img src="https://img.alicdn.com/tps/TB1dSYULVXXXXXlXXXXXXXXXXXX-1000-500.jpg_170x120q30.jpg" alt=""></a>
-                  <a href="javascript:void(0);"><img src="https://img.alicdn.com/tps/TB1xPvNLVXXXXXDXpXXXXXXXXXX-1000-500.jpg_170x120q30.jpg" alt=""></a>
-                </div>
-              </div>
+            <div class="cate-sub"></div>
           </li>
           <li class="category-li">
             <div class="cate-parent">
@@ -816,11 +555,12 @@
   <div id="footer"></div>
   <!-- footer结束 -->
 
-  <script src="https://cdn.bootcss.com/react/16.8.6/umd/react.development.js"></script>
-  <script src="https://cdn.bootcss.com/react-dom/16.8.6/umd/react-dom.development.js"></script>
-  <script src="https://cdn.bootcss.com/babel-standalone/6.26.0/babel.min.js"></script>
+  <!-- <script src="https://cdn.bootcss.com/react/16.8.6/umd/react.development.js"></script> -->
+  <!-- <script src="https://cdn.bootcss.com/react-dom/16.8.6/umd/react-dom.development.js"></script> -->
+  <!-- <script src="https://cdn.bootcss.com/babel-standalone/6.26.0/babel.min.js"></script> -->
+  <script src="https://cdn.bootcss.com/vue/2.6.10/vue.min.js"></script>
   <script src="js/slider.js"></script>
-  <script src="js/script.react.js" type="text/babel"></script>
+  <script src="js/script.vue.js" type="text/babel"></script>
 </body>
 
 </html>
