--- a/demo/website_practice/Tmall/tmall.html
+++ b/demo/website_practice/Tmall/tmall.html
@@ -555,12 +555,12 @@
   <div id="footer"></div>
   <!-- footer结束 -->
 
-  <!-- <script src="https://cdn.bootcss.com/react/16.8.6/umd/react.development.js"></script> -->
-  <!-- <script src="https://cdn.bootcss.com/react-dom/16.8.6/umd/react-dom.development.js"></script> -->
-  <!-- <script src="https://cdn.bootcss.com/babel-standalone/6.26.0/babel.min.js"></script> -->
-  <script src="https://cdn.bootcss.com/vue/2.6.10/vue.min.js"></script>
+  <script src="https://cdn.bootcss.com/react/16.8.6/umd/react.development.js"></script>
+  <script src="https://cdn.bootcss.com/react-dom/16.8.6/umd/react-dom.development.js"></script>
+  <script src="https://cdn.bootcss.com/babel-standalone/6.26.0/babel.min.js"></script>
+  <!-- <script src="https://cdn.bootcss.com/vue/2.6.10/vue.min.js"></script> -->
   <script src="js/slider.js"></script>
-  <script src="js/script.vue.js" type="text/babel"></script>
+  <script src="js/script.react.js" type="text/babel"></script>
 </body>
 
 </html>
